[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Blog personnel"
authors = ["Ahmed Hathroubi <hathroubi.ahmed8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.7.1"
Markdown = "^3.3.6"
typogrify = "^2.0.7"
invoke = "^1.6.0"
livereload = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
